--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -1,3 +1,11 @@
 fastapi==0.115.5
 uvicorn==0.32.0
 pydantic==2.9.2
+sqlalchemy==2.0.23
+mysql-connector-python==8.2.0
+alembic==1.13.1
+python-dotenv==1.0.0
+httpx==0.27.0
+pydantic-settings==2.1.0
+python-multipart==0.0.6
+pytest==7.4.3
